--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^3.3.7",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.1",
+    "react-confirm-alert": "^1.0.7",
     "react-dom": "^15.6.1",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
